
module.exports = {"protodocs":[{"type":"category","label":"Files","items":[{"type":"doc","id":"acls.proto"},{"type":"doc","id":"common_enums.proto"},{"type":"doc","id":"common_wfspec.proto"},{"type":"doc","id":"external_event.proto"},{"type":"doc","id":"node_run.proto"},{"type":"doc","id":"object_id.proto"},{"type":"doc","id":"service.proto"},{"type":"doc","id":"task_def.proto"},{"type":"doc","id":"task_run.proto"},{"type":"doc","id":"user_tasks.proto"},{"type":"doc","id":"variable.proto"},{"type":"doc","id":"wf_run.proto"},{"type":"doc","id":"wf_spec.proto"},{"type":"doc","id":"workflow_event.proto"}]}]};
  